--- a/index.html
+++ b/index.html
@@ -1,12 +1,296 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <title>Test polyfill-dom.js</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head>
-  <body>
+
+<head>
+  <title>Test polyfill-dom.js</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
+<style>
+  body {
+    font-family: "Helvetica", "Arial", sans-serif;
+    max-width: 50em;
+    margin: auto;
+    padding: 1em;
+    color: #555;
+    line-height: 1.5;
+    padding: 4em 1em;
+  }
   
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    color: rgb(255, 64, 64);
+    margin-top: 1em;
+    padding-top: 1em;
+  }
+  
+  pre {
+    padding: 1em;
+    border-radius: 0.5em;
+    border-left: solid 0.5em rgb(255, 64, 64);
+    background-color: rgb(30, 30, 30);
+    color: rgb(175, 175, 175);
+  }
+  
+  pre code {
+    display: block;
+    padding-left: 1em;
+  }
+  /* --- Compatibility HighlightJS --- */
+  
+  code span {
+    color: inherit;
+    font-style: inherit;
+  }
+  
+  a,
+  strong,
+  span {
+    color: rgb(255, 64, 64);
+  }
+  
+  a {
+    text-decoration: none;
+  }
+  
+  span {
+    font-style: italic;
+  }
+  
+  a,
+  strong {
+    font-weight: bold;
+  }
+  
+  a:hover,
+  a:focus {
+    text-decoration: underline;
+  }
+  
+  image,
+  video,
+  audio,
+  iframe {
+    max-width: 100%;
+  }
+</style>
+
+<body>
+
+  <!-- Wrapper -->
+  <div id="wrapper">
+
+    <!-- Header -->
+    <header id="header" class="alt">
+      <a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
+      <nav>
+        <a href="#menu">Menu</a>
+      </nav>
+    </header>
+
+    <!-- Menu -->
+
+
+    <!-- Banner -->
+    <section id="banner" class="major" style="background-position: center 0px;">
+      <div class="inner">
+        <header class="major">
+          <h1>Hi, my name is Forty</h1>
+        </header>
+        <div class="content">
+          <p>A responsive site template designed by HTML5 UP<br> and released under the Creative Commons.</p>
+          <ul class="actions">
+            <li><a href="#one" class="button next scrolly">Get Started</a></li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <!-- Main -->
+    <div id="main">
+
+      <!-- One -->
+      <section id="one" class="tiles">
+        <article style="background-image: url(&quot;images/pic01.jpg&quot;);">
+          <span class="image" style="display: none;">
+										<img src="images/pic01.jpg" alt="">
+									</span>
+          <header class="major">
+            <h3><a href="landing.html" class="link">Aliquam</a></h3>
+            <p>Ipsum dolor sit amet</p>
+          </header>
+          <a href="landing.html" class="link primary"></a>
+        </article>
+        <article style="background-image: url(&quot;images/pic02.jpg&quot;);">
+          <span class="image" style="display: none;">
+										<img src="images/pic02.jpg" alt="">
+									</span>
+          <header class="major">
+            <h3><a href="landing.html" class="link">Tempus</a></h3>
+            <p>feugiat amet tempus</p>
+          </header>
+          <a href="landing.html" class="link primary"></a>
+        </article>
+        <article style="background-image: url(&quot;images/pic03.jpg&quot;);">
+          <span class="image" style="display: none;">
+										<img src="images/pic03.jpg" alt="">
+									</span>
+          <header class="major">
+            <h3><a href="landing.html" class="link">Magna</a></h3>
+            <p>Lorem etiam nullam</p>
+          </header>
+          <a href="landing.html" class="link primary"></a>
+        </article>
+        <article style="background-image: url(&quot;images/pic04.jpg&quot;);">
+          <span class="image" style="display: none;">
+										<img src="images/pic04.jpg" alt="">
+									</span>
+          <header class="major">
+            <h3><a href="landing.html" class="link">Ipsum</a></h3>
+            <p>Nisl sed aliquam</p>
+          </header>
+          <a href="landing.html" class="link primary"></a>
+        </article>
+        <article style="background-image: url(&quot;images/pic05.jpg&quot;);">
+          <span class="image" style="display: none;">
+										<img src="images/pic05.jpg" alt="">
+									</span>
+          <header class="major">
+            <h3><a href="landing.html" class="link">Consequat</a></h3>
+            <p>Ipsum dolor sit amet</p>
+          </header>
+          <a href="landing.html" class="link primary"></a>
+        </article>
+        <article style="background-image: url(&quot;images/pic06.jpg&quot;);">
+          <span class="image" style="display: none;">
+										<img src="images/pic06.jpg" alt="">
+									</span>
+          <header class="major">
+            <h3><a href="landing.html" class="link">Etiam</a></h3>
+            <p>Feugiat amet tempus</p>
+          </header>
+          <a href="landing.html" class="link primary"></a>
+        </article>
+      </section>
+
+      <!-- Two -->
+      <section id="two">
+        <div class="inner">
+          <header class="major">
+            <h2>Massa libero</h2>
+          </header>
+          <p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus
+            pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque
+            lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna
+            magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
+          <ul class="actions">
+            <li><a href="landing.html" class="button next">Get Started</a></li>
+          </ul>
+        </div>
+      </section>
+
+    </div>
+
+    <!-- Contact -->
+    <section id="contact">
+      <div class="inner">
+        <section>
+          <form method="post" action="#">
+            <div class="field half first">
+              <label for="name">Name</label>
+              <input name="name" id="name" type="text">
+            </div>
+            <div class="field half">
+              <label for="email">Email</label>
+              <input name="email" id="email" type="text">
+            </div>
+            <div class="field">
+              <label for="message">Message</label>
+              <textarea name="message" id="message" rows="6"></textarea>
+            </div>
+            <ul class="actions">
+              <li><input value="Send Message" class="special" type="submit"></li>
+              <li><input value="Clear" type="reset"></li>
+            </ul>
+          </form>
+        </section>
+        <section class="split">
+          <section>
+            <div class="contact-method">
+              <span class="icon alt fa-envelope"></span>
+              <h3>Email</h3>
+              <a href="#">information@untitled.tld</a>
+            </div>
+          </section>
+          <section>
+            <div class="contact-method">
+              <span class="icon alt fa-phone"></span>
+              <h3>Phone</h3>
+              <span>(000) 000-0000 x12387</span>
+            </div>
+          </section>
+          <section>
+            <div class="contact-method">
+              <span class="icon alt fa-home"></span>
+              <h3>Address</h3>
+              <span>1234 Somewhere Road #5432<br>
+										Nashville, TN 00000<br>
+										United States of America</span>
+            </div>
+          </section>
+        </section>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer id="footer">
+      <div class="inner">
+        <ul class="icons">
+          <li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+          <li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+          <li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+          <li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+          <li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+        </ul>
+        <ul class="copyright">
+          <li>© Untitled</li>
+          <li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+          <li>Demo Images: <a href="https://unsplash.com">Unsplash</a></li>
+        </ul>
+      </div>
+    </footer>
+
+  </div>
+
+  <!-- Scripts -->
+  <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/js/jquery.scrolly.min.js"></script>
+  <script src="assets/js/jquery.scrollex.min.js"></script>
+  <script src="assets/js/skel.min.js"></script>
+  <script src="assets/js/util.js"></script>
+  <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+  <script src="assets/js/main.js"></script>
+
+
+  <nav id="menu">
+    <div class="inner">
+      <ul class="links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="landing.html">Landing</a></li>
+        <li><a href="generic.html">Generic</a></li>
+        <li><a href="elements.html">Elements</a></li>
+      </ul>
+      <ul class="actions vertical">
+        <li><a href="#" class="button special fit">Get Started</a></li>
+        <li><a href="#" class="button fit">Log In</a></li>
+      </ul>
+    </div><a class="close" href="#menu">Close</a></nav>
   <script src="polyfill-dom.js"></script>
-  </body>
+</body>
+
 </html>
